k8s_2_homework/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-2-hw-service
spec:
  selector:
    app: k8s-2-hw
  ports:
  - port: 8000
    targetPort: 8000
  type: NodePort
