k8s_2_homework/deployment/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata: 
  name: k8s-2-hw-ingress
  annotations:
    # nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: "arch.homework"
    http:
      paths:
      - path: "/otusapp/v.zaitsev($|/)(.*)"
        pathType: Prefix
        backend:
          serviceName: k8s-2-hw-service
          servicePort: 8000
